# prql

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  _typos.toml  bacon.toml  justfile
.config/: _typos.toml  prettier.yaml  prettierignore
.github/: .codecov.yml
.github/actions/build-prqlc/: action.yaml
.github/workflows/: publish-web.yaml  test-all.yaml  test-rust.yaml
crates/prql-compiler/src/sql/: gen_query.rs
prql-compiler/crates/prql-compiler/src/sql/: mod.rs
prql-compiler/crates/prqlc/: README.md
prql-compiler/crates/tests_misc/tests/: ast_code_matches.rs
prqlc/bindings/clib/: Cargo.toml  libprql_lib.h  libprql_lib.hpp
prqlc/bindings/clib/src/: lib.rs
prqlc/bindings/dotnet/PrqlCompiler/: PrqlCompiler.cs
prqlc/bindings/elixir/: README.md
prqlc/bindings/elixir/native/prql/: Cargo.toml
prqlc/bindings/java/: Cargo.toml
prqlc/bindings/java/src/: lib.rs
prqlc/bindings/js/: Cargo.toml  README.md  package.json
prqlc/bindings/js/src/: lib.rs
prqlc/bindings/php/: README.md
prqlc/bindings/python/: Cargo.toml  README.md
prqlc/bindings/python/src/: lib.rs
prqlc/crates/ast/: Cargo.toml
prqlc/crates/ast/src/: stmt.rs
prqlc/crates/cli/: Cargo.toml  README.md
prqlc/crates/cli/src/: cli.rs  jinja.rs  main.rs  watch.rs
prqlc/crates/macros/: Cargo.toml
prqlc/crates/macros/src/: lib.rs
prqlc/crates/main/: Cargo.toml
prqlc/crates/main/benches/: bench.rs
prqlc/crates/main/examples/compile-files/: Cargo.toml  build.rs
prqlc/crates/main/src/: error_message.rs  lib.rs
prqlc/crates/main/src/codegen/: ast.rs  mod.rs  pl.rs
prqlc/crates/parser/: Cargo.toml
prqlc/crates/parser/src/: expr.rs  interpolation.rs  lexer.rs  test.rs
prqlc/crates/tests_misc/tests/: ast_code_matches.rs
web/book/: Cargo.toml  book.toml
web/book/src/: lib.rs
web/book/tests/documentation/: book.rs  main.rs
web/book/theme/: highlight.js
web/playground/: package-lock.json  package.json
web/website/: config.yml
web/website/content/: _index.md  roadmap.md
web/website/content/posts/: 2023-01-07-functional-relations.md
(+69 files in other folders)
