[workspace]
members = [
  "prql-compiler/crates/prql-ast",
  "prql-compiler/crates/prql-compiler",
  "prql-compiler/crates/prql-compiler-macros",
  "prql-compiler/crates/prql-parser",
  "prql-compiler/crates/prqlc",
  "prql-compiler/crates/tests_misc",
  "prql-compiler/crates/prql-compiler/examples/compile-files", # An example
  "prql-compiler/bindings/prql-elixir/native/prql",
  "prql-compiler/bindings/prql-java",
  "prql-compiler/bindings/prql-js",
  "prql-compiler/bindings/prql-lib",
  "prql-compiler/bindings/prql-python",
  "web/book", # The book / docs
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PRQL/prql"
rust-version = "1.65.0"
version = "0.9.2"

[profile.release.package.prql-js]
# Optimize for small code size.
opt-level = "s"
# Insta runs faster this way, ref https://insta.rs/docs/quickstart/
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3

[workspace.metadata.release]
allow-branch = ["*"]
consolidate-commits = true
