[package]
name = "prql-java"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate_type = ["cdylib"]
doctest = false
test = false

[dependencies]
jni = "0.21.1"
prqlc_main = {path = "../../crates/main", default-features = false}

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""
