[package]
description = "Macros for PRQL compilation at build time"
name = "prqlc_macros"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false
proc_macro = true
test = false

[dependencies]
prqlc_main = {path = "../main", default-features = false, version = "0.9.2" }
syn = "2.0.2"

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""
